@@ -1,31 +1,0 @@
-<?php
-   /** Author:       Luke Ehresman
-       Date:         January 2, 2000
-       Theme Name:   "July Fourth Theme"
-
-       This is the default theme that comes standard with SquirrelMail.
-       Most of the colors were taken from mail.yahoo.com's theme on their
-       site.
-
-       To create a new theme, just copy this file, and edit the colors.
-       Be sure to rename the file and keep the original, just in case.
-
-       NOTE:
-       Please email any themes you create to luke@usa.om.org for inclusion
-       in further releases of SquirrelMail and for download from the web
-       page.
-    **/
-
-    $color[0]   = "#6495ED"; // (cornflower blue)TitleBar
-    $color[1]   = "#800000"; // (red)
-    $color[2]   = "#8B0000"; // (dark red)       Warning/Error Messages
-    $color[3]   = "#FF0000"; // (bright red)     Left Bar Background
-    $color[4]   = "#FFFFFF"; // (white)          Normal Background
-    $color[5]   = "#FFFFCC"; // (light yellow)   Table Headers
-    $color[6]   = "#0000FF"; // (blue)           Text on left bar
-    $color[7]   = "#1E90FF"; // (blue)           Links
-    $color[8]   = "#000000"; // (black)          Normal text
-    $color[9]   = "#00008B"; // (blue)       	 
-    $color[10]  = "#0000FF"; // (blue ??)      
-    $color[11]  = "#FFFF00"; // (yellow)         Special Folders color
-?>
