@@ -1,5 +1,6 @@
 Version 0.5pre1 -- DEVELOPMENT
 ------------------------------
+- Searching folders functionality added 
 - Date display now is similar to Netscape Messenger
 - Many bugs have been reported to the list, and been squashed
 - Help system developed 
